--- a/jobwork.css
+++ b/jobwork.css
@@ -288,7 +288,7 @@ body {
 }
 
 .banner-image {
-  background-image: url('public/services.avif');
+  background-image: url('public/jobworkpage.jpg');
   background-size: cover;
   background-position: center;
   height: 60vh;
