--- a/product.css
+++ b/product.css
@@ -290,7 +290,7 @@ body {
 }
 
 .banner-image {
-  background-image: url('public/aboutus.webp');
+  background-image: url('public/productpage.jpg');
   background-size: cover;
   background-position: center;
   height: 60vh;
