--- a/contact.css
+++ b/contact.css
@@ -11,13 +11,13 @@ body {
 
 
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Segoe UI', sans-serif;
 }
 
 /* HEADER */
@@ -65,7 +65,7 @@ header {
   color: black;
   font-size: 18px;
   font-weight: 600;
-  font-family: "Arimo", sans-serif;
+  font-family: 'Segoe UI', sans-serif;
 }
 
 .main-menu a:hover {
@@ -103,7 +103,7 @@ header {
   align-items: center;
   gap: 5px;
   font-weight: 600;
-  font-family: "Arimo", sans-serif;
+  font-family: 'Segoe UI', sans-serif;
 }
 
 .dropdown-menu {
@@ -296,7 +296,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 100px;
-  padding: 10px 20px;
+  padding: 20px 30px;
   flex-wrap: wrap;
 }
 
@@ -314,7 +314,7 @@ body {
 .contact-item p {
   margin: 0;
   font-size: 18px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Segoe UI', sans-serif;
 }
 
 .contact-item a {
@@ -373,7 +373,7 @@ body {
   color: #1F2A44;
   margin-bottom: 20px;
   font-size: 32px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Playfair Display', serif;
   text-align: center;
 }
 
@@ -401,7 +401,7 @@ textarea {
   border-radius: 6px;
   border: 1px solid #ccc;
   font-size: 14px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Segoe UI', sans-serif;
 }
 
 textarea {
@@ -418,7 +418,7 @@ textarea {
   cursor: pointer;
   margin-top: 10px;
   transition: background 0.3s;
-  font-family:  'Times New Roman', Times, serif;
+  font-family:  'Segoe UI', sans-serif;
 }
 
 .con-btn-si:hover {
@@ -490,7 +490,7 @@ textarea {
       color: #333;
       padding-bottom: 20px;
       font-size: 2.2rem;
-      font-family: 'Times New Roman', Times, serif;
+      font-family: 'Playfair Display', serif;
     }
 
 
