--- a/gallery.css
+++ b/gallery.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Times New Roman', serif;
 }
 
 /* HEADER */
@@ -269,7 +269,7 @@ body {
   max-width: 100vw;
 }
 .banner-image {
-  background: url("public/3.jpg") no-repeat center center/cover;
+  background: url("public/professional-welder-protective-uniform-helmet-welding-metal-part-workshop.jpg") no-repeat center center/cover;
   height: 60vh;
   display: flex;
   justify-content: center;
@@ -282,6 +282,7 @@ body {
 .contact-banner h1 {
   text-align: center;
   margin-left: 700px;
+  font-size: 50px;
 }
 
 
