--- a/jobwork.css
+++ b/jobwork.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Times New Roman', serif;
 }
 
 /* HEADER */
@@ -269,7 +269,7 @@ body {
   max-width: 100vw;
 }
 .banner-image {
-  background: url("public/3.jpg") no-repeat center center/cover;
+  background: url("public/cutting-metal-with-plasma-equipment-plant.jpg") no-repeat center center/cover;
   height: 60vh;
   display: flex;
   justify-content: center;
@@ -288,7 +288,7 @@ body {
 }
 
 .banner-image {
-  background-image: url('public/jobworkpage.jpg');
+  background-image: url('public/worker-dark-suit-grinding-steel-structure-modern.jpg');
   background-size: cover;
   background-position: center;
   height: 60vh;
@@ -306,7 +306,7 @@ body {
   font-weight: bold;
   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
   margin-bottom: 130px;
-  font-family: 'Merriweather', serif;
+  font-family: 'Playfair Display', serif;
   padding: 0 20px;
 }
 
@@ -354,7 +354,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
+  font-family: 'Playfair Display', serif;
 }
 
 body {
@@ -419,7 +419,7 @@ body {
 
 h1 {
   margin-bottom: 15px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Playfair Display', serif;
 }
 
 h3 {
