--- a/product.css
+++ b/product.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Times New Roman', serif;
 }
 
 /* HEADER */
@@ -299,16 +299,15 @@ body {
   justify-content: center;
   position: relative;
 }
-
 .banner-image h1 {
   color: white;
-  font-size: 48px;
+  font-size: 70px;
   z-index: 1;
   text-align: center;
   font-weight: bold;
   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
   margin-bottom: 130px;
-  font-family: 'Merriweather', serif;
+  font-family:  'Playfair Display', serif;
   padding: 0 20px;
 }
 
@@ -320,11 +319,12 @@ body {
   height: auto;
 }
 
-/* Responsive Styles */
+
 @media (max-width: 1024px) {
   .banner-image h1 {
     font-size: 38px;
     margin-bottom: 100px;
+     font-family: 'Playfair Display', serif;
   }
 }
 
@@ -420,7 +420,7 @@ body {
 
 h1 {
   margin-bottom: 15px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Playfair Display', serif;
 }
 
 h3 {
@@ -530,13 +530,13 @@ ul li {
 /* Responsive Typography */
 @media (max-width: 1024px) {
   .start-project h1 {
-    font-size: 2.2rem;
+    font-size: 50px;
   }
 }
 
 @media (max-width: 768px) {
   .start-project h1 {
-    font-size: 1.8rem;
+    font-size: 16px;
   }
 
   .start-project p {
